--- a/src/main/resources/templates/information.html
+++ b/src/main/resources/templates/information.html
@@ -19,50 +19,50 @@
 	        <thead>
 	          <tr>
 	            <th></th>
-	            <th>Mattina</th>
-	            <th>Pomeriggio</th>
-	            <th>Sera</th>
+	            <th>Morning</th>
+	            <th>Afternoon</th>
+	            <th>Evening</th>
 	          </tr>
 	        </thead>
 	        <tbody>
 	          <tr>
-	              <td class="riga">Lunedì</td>
+	              <td class="riga">Monday</td>
 	              <td>9:00 - 13:00</td>
 	              <td>14:00 - 19:00</td>
 	              <td>21:00 - 00:00</td>
 	          </tr>
 	          <tr>
-	            <td class="riga">Martedì</td>
+	            <td class="riga">Tuesday</td>
 	            <td>9:00 - 13:00</td>
 	            <td>14:00 - 19:00</td>
 	            <td>21:00 - 00:00</td>
 	          </tr>
 	          <tr>
-	            <td class="riga">Mercoledì</td>
+	            <td class="riga">Wednesday</td>
 	            <td>9:00 - 13:00</td>
 	            <td>14:00 - 19:00</td>
 	            <td>21:00 - 00:00</td>
 	          </tr>
 	          <tr>
-	            <td class="riga">Giovedì</td>
+	            <td class="riga">Thursday</td>
 	            <td>9:00 - 13:00</td>
 	            <td>14:00 - 19:00</td>
 	            <td>21:00 - 00:00</td>
 	          </tr>
 	          <tr>
-	            <td class="riga">Venerdì</td>
+	            <td class="riga">Friday</td>
 	            <td>9:00 - 13:00</td>
 	            <td>14:00 - 19:00</td>
 	            <td class="chiuso">closed</td>
 	          </tr>
 	          <tr>
-	            <td class="riga">Sabato</td>
+	            <td class="riga">Saturday</td>
 	            <td>9:00 - 13:00</td>
 	            <td class="chiuso">closed</td>
 	            <td class="chiuso">closed</td>
 	          </tr>
 	          <tr>
-	            <td class="riga">Domenica</td>
+	            <td class="riga">Sunday</td>
 	            <td class="chiuso">closed</td>
 	            <td class="chiuso">closed</td>
 	            <td class="chiuso">closed</td>
