--- a/src/main/resources/static/css/videogame_style/details_videogame_style.css
+++ b/src/main/resources/static/css/videogame_style/details_videogame_style.css
@@ -1,8 +1,3 @@
-
-body, html{
-     background: rgb(0, 150, 220);
-}
-
 /* ----------
 SHOWCASE VIDEOGAME
 -------------- */
@@ -12,6 +7,7 @@ SHOWCASE VIDEOGAME
     margin-top: 80px;
     display: flex;
     width: 100%;
+    background-color: white;
 }
 
 .img_videogame{
@@ -48,18 +44,20 @@ SHOWCASE VIDEOGAME
 
 .more_info{
     font-family: 'Balsamiq Sans', cursive;
+    background-color: rgb(105,168,199);
 }
 
 .more_info p {
     font-size: 50px;
     display: inline-block;
     margin: 0px 50px;
-    color: blueviolet;
+    color: black;
 }
 
 .more_info h2 {
     display: inline-block;
     margin-left: 10px;
+    color: red;
 }
 
 .more_info p {
@@ -81,7 +79,7 @@ SHOWCASE VIDEOGAME
 
 .rating span {
 	font-size: 50px;
-    color: blueviolet;
+    color: black;
 }
 
 .description p{
