--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -9,8 +9,10 @@
 		<header th:fragment="navbar">
 			<nav class="navbar">
 	            <div class="logo">
-	                <div class="img_shock"></div>
 	                <h2>GAMESHOCK</h2>
+		            <div class="img_shock">
+		            	<img th:src="@{/images/general_images/fulmine_senza_sfondo.png}">
+		            </div>
 	            </div>
 	            <div class="utility">
 	                <ul class="menu">
