--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
 			<head th:insert="fragments/navbar.html :: navbar_css"> </head>
 			<head th:insert="fragments/footer.html :: footer_css"> </head>
 			<link th:href="@{/css/home_style/index_style.css}" rel="stylesheet">
+		<meta name="google-site-verification" content="zEW8OyAGTHYz51hvzm1XvAJSYJZvmZkIDazhYdyeJSc" />
 	</head>
 	<body>
 	
