--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 	<head>
 	    	<head th:insert="fragments/base.html :: headerfiles(title=#{pageTitle.index})"></head>
-			<head th:insert="fragments/navbar.html :: navbar_css"> </head>
-			<head th:insert="fragments/footer.html :: footer_css"> </head>
-			<link th:href="@{/css/home_style/index_style.css}" rel="stylesheet">
+		<head th:insert="fragments/navbar.html :: navbar_css"> </head>
+		<head th:insert="fragments/footer.html :: footer_css"> </head>
+		<link th:href="@{/css/home_style/index_style.css}" rel="stylesheet">
 		<meta name="google-site-verification" content="zEW8OyAGTHYz51hvzm1XvAJSYJZvmZkIDazhYdyeJSc" />
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-8CED4H3G64"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-8CED4H3G64');
+		</script>
 	</head>
 	<body>
 	
